# vivo_bootcamp_dio

./: LICENSE  README.md
challenges/challenge1/: challenge1.py  challenge1_v1.py  challenge1_v2.py  challenge1_v3.py  challenge1_v4.py  log.txt
challenges/challenge2/: challenge2.py
dbapi_sqlite3/: clients.db  dbapi.py
lab-natty-or-not/: README.md
tdd-project/: .env  .pre-commit-config.yaml  pyproject.toml
tdd_project/: docker-compose.yml  pyproject.toml
tdd_project/store/controllers/: product.py
tdd_project/store/schemas/: product.py
tdd_project/store/usecases/: product.py
tdd_project/tests/: conftest.py  factories.py
tdd_project/tests/schemas/: test_product.py
tdd_project/tests/usecases/: test_product.py
workout_api/alembic/: env.py
workout_api/alembic/versions/: 46112906174a_init_db.py
workout_api/atleta/: models.py  schemas.py
workout_api/categorias/: models.py  schemas.py
workout_api/centro_treinamento/: models.py  schemas.py
workout_api/contrib/: models.py
workout_api/workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/workout_api/categorias/: controller.py  schemas.py
workout_api/workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/workout_api/contrib/: dependencies.py  models.py  schemas.py
