[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Pedro Scarpin Ribeiro <pedroscarpinribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.1"
pymongo = "^4.7.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
